--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "clean": "rimraf .next node_modules && npm install"
   },
   "dependencies": {
+    "@microsoft/signalr": "^10.0.0",
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
