--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^22.19.9",
     "@types/react": "^19.0.3",
     "@types/react-dom": "^19.0.3",
